# QT-OPENGL-Medical-Platform

./: .gitignore  CMakeLists.txt  README.md
QtGuiApp/: CMakeLists.txt  resources.qrc
QtGuiApp/assets/shaders/: dicom.frag  dicom.vert  image.vert  lighttest.frag  lighttest.vert  phong.frag  phongEnv.vert  rectangle.frag  rectangle_image.frag  rectangle_image.vert
QtGuiApp/res/icon/: apprc.rc
QtGuiApp/source/: GlobalConfig.cpp  GlobalConfig.h  MainWindow-UI.h  MainWindow.cpp  MainWindow.h  MyOpenGLWidget.cpp  MyOpenGLWidget.h  MyProgressDialog.cpp  MySocketClient.cpp  MySocketClient.h  MySocketServer-UI.h  MySocketServerDlg.cpp  MySocketServerDlg.h  MyStruct.h  MyTcpServer.cpp  MyTcpServer.h  MyThread_QRunnable.cpp  MyThread_QRunnable.h  MyThread_Work.cpp  MyThread_Work.h  main.cpp  pch.h
QtGuiApp/source/camera/: Camera.cpp  Camera.h  Camera2DControl.cpp  Camera2DControl.h  CameraControl.cpp  CameraControl.h  GameCameraControl.cpp  GameCameraControl.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  TrackBallCameraControl.cpp  TrackBallCameraControl.h
QtGuiApp/source/opengl/: AssimpInstanceLoader.cpp  AssimpInstanceLoader.h  AssimpLoader.cpp  AssimpLoader.h  DicomImageReader.cpp  DicomImageReader.h  DicomTexture.cpp  DicomTexture.h  Geometry.cpp  Geometry.h  MyGLWidget.cpp  MyGLWidget.h  MyGeometry.cpp  MyOpenGLWidget.cpp  MyOpenGLWidget.h  MyScene.h  MyTexture.cpp  Object.cpp  Object.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
QtGuiApp/source/opengl/Light/: AmbientLight.cpp  AmbientLight.h  DirectionalLight.h  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
QtGuiApp/source/opengl/Material/: DicomMaterial.cpp  DicomMaterial.h  ImageMaterial.cpp  ImageMaterial.h  LightTestMaterial.cpp  LightTestMaterial.h  Material.cpp  Material.h  MygrassInstanceMaterial.h  PhongMaterial.cpp  PhongMaterial.h  WhiteMaterial.cpp  WhiteMaterial.h  cubeMaterial.cpp  cubeMaterial.h  depthMaterial.cpp  depthMaterial.h  grassInstanceMaterial.cpp  grassInstanceMaterial.h  opacityMaskMaterial.cpp  opacityMaskMaterial.h  phongEnvMaterial.cpp  phongEnvMaterial.h  phongInstanceMaterial.cpp  phongInstanceMaterial.h  screenMaterial.cpp  screenMaterial.h
QtGuiApp/source/opengl/framebuffer/: framebuffer.cpp  framebuffer.h
QtGuiApp/source/opengl/mesh/: Mesh.cpp  Mesh.h  MyMesh.h  instancedMesh.cpp  instancedMesh.h
QtGuiApp/source/opengl/renderer/: MyRenderer.cpp  MyRenderer.h  Renderer.cpp  Renderer.h
QtGuiApp/source/opengl/tools/: Tools.cpp  Tools.h
ui/: MainWindow-UI.h  MainWindow-UI.ui
